--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <div id="messages"></div>
         <div id="input-container">
             <input type="text" id="messageText" autocomplete="off" placeholder="Type a message..."/>
-            <button onclick="sendMessage()">Send</button>
+            <button onclick="sendMessage()">❤️ Send</button>
         </div>
-        <!-- Only display the delete button for User1 -->
+        <!-- Delete button for User1 only -->
         <button id="deleteUser2Messages" onclick="deleteUser2Messages()" style="display:none;">Delete User2 Messages</button>
     </div>
 
-    <script src = "script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
