--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
         <div id="messages"></div>
         <div id="input-container">
             <input type="text" id="messageText" autocomplete="off" placeholder="Type a message..."/>
-            <button onclick="sendMessage()">Send</button>
-        
-        <!-- Delete button for User1 only -->
-            <button id="deleteUser2Messages" onclick="deleteUser2Messages()" style="display:none;">Delete User2 Messages</button>
+            <button>Send</button>
         </div>
+        <!-- Delete button for User1, now visible by default -->
+        <button id="deleteUser2Messages">Delete User2 Messages</button>
     </div>
 
     <script src="script.js"></script>
