--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <div id="messages"></div>
         <div id="input-container">
             <input type="text" id="messageText" autocomplete="off" placeholder="Type a message..."/>
-            <button id = "sendButton" onclick="sendMessage()">Send</button>
+            <button id = "sendButton" >Send</button>
+
         </div>
         <!-- Delete button for User1, now visible by default -->
         <button id="deleteUser2Messages" onclick="deleteUser2Messages()">Delete User2 Messages</button>
