--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         </div>
         <!-- Delete button for User1, now visible by default -->
-        <button id="deleteUser2Messages" onclick="deleteUser2Messages()">Delete User2 Messages</button>
+        <button id="deleteUser2Messages">Delete User2 Messages</button>
     </div>
 
     <script src="script.js"></script>
